objects/RES_Competitor__c.object
<CustomObject>
    <description>Vertiba 3/4/2014 - Created to track the competitor&apos;s information on the opportunity</description>
    <fields>
        <fullName>Competitor_s_Technology_Rating__c</fullName>
        <description>(Fields can be created to compare Price, Customer Relationship, Cost Structure, Supplier Relationships, Past Experience, Capital ...etc.)
This is a Comparative rating that looks at the Competitor&apos;s Technology verses our own. A 3 indicates the Competitor&apos;s have an equal offering to RES&apos;s. A 5 would indicate the Competitor has a distinct advantage.</description>
        <inlineHelpText>Similar fields can be created in order to compare our Offering verses our Comptitor. (e.g. Price, Customer Relationship, Cost Structure, Supplier Relationships, Past Experience, Capital ...etc.)</inlineHelpText>
        <label>Competitor&apos;s Technology Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incumbent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Incumbent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PPA_Price__c</fullName>
        <label>PPA Price</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RES_Competitor_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Vertiba3/10/2014 - Phase1</description>
        <label>Competitor Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Competitor Opportunity Involvement</relationshipLabel>
        <relationshipName>Competitors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RES_Opportunity__c</fullName>
        <description>Vertiba3/10/2014 - Phase1</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Competitors</relationshipLabel>
        <relationshipName>Competitors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RES_Strengths__c</fullName>
        <description>Vertiba3/10/2014 - Phase1</description>
        <label>Strengths</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RES_Weaknesses__c</fullName>
        <description>Vertiba3/10/2014 - Phase1</description>
        <label>Weaknesses</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Winning_Competitor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Winning Competitor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Winning_Price__c</fullName>
        <label>Winning Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Competitor</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>